--- a/exchange/index.html
+++ b/exchange/index.html
@@ -51,6 +51,35 @@
         animation: flip 5s linear infinite;
       }
     </style>
+    <style>
+      @keyframes gradientAnimation {
+        0% {
+          background: linear-gradient(
+            to right,
+            rgba(6, 182, 212, 0.3),
+            rgba(34, 211, 238, 0.3)
+          );
+        }
+        50% {
+          background: linear-gradient(
+            to right,
+            rgba(34, 211, 238, 0.3),
+            rgba(103, 232, 249, 0.3)
+          );
+        }
+        100% {
+          background: linear-gradient(
+            to right,
+            rgba(6, 182, 212, 0.3),
+            rgba(34, 211, 238, 0.3)
+          );
+        }
+      }
+
+      .focus\:animate-gradient:focus {
+        animation: gradientAnimation 1.5s ease-in-out infinite;
+      }
+    </style>
   </head>
   <body class="w-full h-full bg-center back">
     <div class="cursor"></div>
@@ -66,16 +95,16 @@
       <p class="text-white my-2 text-[10pt]">
         Calculate your crypto echange rate including fees
       </p>
-      <div id="choose" class="flex justify-center w-[520px] gap-4">
+      <div id="choose" class="flex justify-center w-[520px] gap-4 mb-2">
         <button
           id="toCryptoBtn"
-          class="text-white text-[10pt] font-semibold text-center w-full border border-white/50 py-2 rounded-lg cursor-pointer focus:border-sky-500 focus:shadow-inner focus:shadow-sky-500"
+          class="text-white text-[10pt] font-semibold text-center w-full border border-white/50 py-2 rounded-lg cursor-pointer transition-all duration-300 ease-in-out focus:ring-2 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient focus:outline-none"
         >
           To Cryto
         </button>
         <button
           id="fromCryptoBtn"
-          class="text-white text-[10pt] font-semibold text-center w-full border border-white/50 py-2 rounded-lg cursor-pointer focus:border-sky-500 focus:shadow-inner focus:shadow-sky-500"
+          class="text-white text-[10pt] font-semibold text-center w-full border border-white/50 py-2 rounded-lg cursor-pointer transition-all duration-300 ease-in-out focus:ring-2 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient focus:outline-none"
         >
           From Cryto
         </button>
@@ -87,46 +116,46 @@
         <div id="exchangeOptions" class="w-full flex justify-center gap-2">
           <button
             data-from="Wise"
-            class="bg-black text-white px-4 py-2 shadow-xl border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 active:animate-gradient"
+            class="bg-black text-white px-4 py-2 shadow-xl border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
               alt="image"
               class="w-[20px]"
             />
-            <span>Wise</span>
+            Wise
           </button>
 
           <button
             data-from="Revolut"
-            class="bg-black text-white text-[10pt] px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
               alt="image"
-              class="w-[20px] items-center"
+              class="w-[20px]"
             />
             Revolut
           </button>
           <button
             data-from="Skrill"
-            class="bg-black text-white text-[10pt] px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
               alt="image"
-              class="w-[20px] items-center"
+              class="w-[20px]"
             />
             Skrill
           </button>
         </div>
         <div
           id="fromCryptoDiv"
-          class="hidden w-[520px] grid grid-cols-3 gap-2 max-h-32 overflow-auto border border-white/50 p-2 rounded-lg"
+          class="hidden w-[520px] grid grid-cols-3 gap-2 max-h-36 overflow-auto p-2 rounded-lg mt-[-10px]"
         >
           <button
             data-to="Exchange"
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -137,7 +166,7 @@
           </button>
           <button
             data-to="Cashapp"
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -148,7 +177,7 @@
           </button>
           <button
             data-to="Wise"
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -158,7 +187,7 @@
             Wise
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -168,7 +197,7 @@
             Revolut
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -178,7 +207,7 @@
             Skrill
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -188,7 +217,7 @@
             Zelle
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -198,7 +227,7 @@
             Card Transfer
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -208,7 +237,7 @@
             Bank Transfer
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -218,7 +247,7 @@
             PHP
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
@@ -228,7 +257,7 @@
             UPI
           </button>
           <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1"
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
               src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
