--- a/exchange/index.html
+++ b/exchange/index.html
@@ -50,34 +50,42 @@
       .logo-spin {
         animation: flip 5s linear infinite;
       }
+      body {
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+      }
+      body.loaded {
+        opacity: 1;
+      }
+      .receive-box {
+        transition: transform 0.1s ease-in-out, opacity 0.1s ease-in-out;
+      }
+      .receive-box.show {
+        transform: scale(1.1);
+      }
     </style>
     <style>
       @keyframes gradientAnimation {
         0% {
-          background: linear-gradient(
-            to right,
-            rgba(6, 182, 212, 0.3),
-            rgba(34, 211, 238, 0.3)
-          );
+          background-position: 0% 50%;
         }
         50% {
-          background: linear-gradient(
-            to right,
-            rgba(34, 211, 238, 0.3),
-            rgba(103, 232, 249, 0.3)
-          );
+          background-position: 100% 50%;
         }
         100% {
-          background: linear-gradient(
-            to right,
-            rgba(6, 182, 212, 0.3),
-            rgba(34, 211, 238, 0.3)
-          );
+          background-position: 0% 50%;
         }
       }
 
       .focus\:animate-gradient:focus {
-        animation: gradientAnimation 1.5s ease-in-out infinite;
+        background: linear-gradient(
+          -90deg,
+          rgba(34, 211, 238, 0.3),
+          rgba(135, 222, 236, 0.7),
+          rgba(103, 232, 249, 0.3)
+        );
+        background-size: 400% 400%;
+        animation: gradientAnimation 5s ease;
       }
     </style>
   </head>
@@ -86,9 +94,9 @@
     <div class="cursor2"></div>
 
     <div class="flex flex-col items-center justify-start h-full pt-6 px-12">
-      <img src="./images/logo.png" class="w-24 h-24 mb-2 logo-spin" />
+      <img src="./images/logo.png" class="w-24 h-24 mb-5 logo-spin" />
       <h1
-        class="text-white text-4xl md:text-5xl gradient font-[800] text-center leading-relaxed pb-4 w-full"
+        class="text-white text-4xl md:text-5xl gradient font-[800] text-center leading-relaxed pb-4 w-full mt-5"
       >
         Crypto Exchange
       </h1>
@@ -162,7 +170,7 @@
               alt="image"
               class="w-[20px] items-center"
             />
-            Exchange
+            Cashapp
           </button>
           <button
             data-to="Cashapp"
@@ -173,7 +181,7 @@
               alt="image"
               class="w-[20px] items-center"
             />
-            Cashapp
+            Wise
           </button>
           <button
             data-to="Wise"
@@ -184,7 +192,7 @@
               alt="image"
               class="w-[20px] items-center"
             />
-            Wise
+            Revolut
           </button>
           <button
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
@@ -194,7 +202,7 @@
               alt="image"
               class="w-[20px] items-center"
             />
-            Revolut
+            Visa/MC
           </button>
           <button
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
@@ -214,26 +222,6 @@
               alt="image"
               class="w-[20px] items-center"
             />
-            Zelle
-          </button>
-          <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
-          >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
-              alt="image"
-              class="w-[20px] items-center"
-            />
-            Card Transfer
-          </button>
-          <button
-            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
-          >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
-              alt="image"
-              class="w-[20px] items-center"
-            />
             Bank Transfer
           </button>
           <button
@@ -244,7 +232,7 @@
               alt="image"
               class="w-[20px] items-center"
             />
-            PHP
+            Zelle
           </button>
           <button
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
@@ -255,6 +243,26 @@
               class="w-[20px] items-center"
             />
             UPI
+          </button>
+          <button
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              alt="image"
+              class="w-[20px] items-center"
+            />
+            Crypto to crypto
+          </button>
+          <button
+            class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              alt="image"
+              class="w-[20px] items-center"
+            />
+            TON
           </button>
           <button
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
@@ -283,7 +291,7 @@
           <p class="text-center text-[10pt]">Exchange Rate:</p>
         </div>
         <div
-          class="bg-black text-white w-full p-4 py-6 border border-white/50 rounded-lg shadow-2xl shadow-cyan-500/50 ring-2 mb-4"
+          class="bg-black text-white w-full p-4 py-6 border border-white/50 rounded-lg shadow-2xl shadow-cyan-500/50 ring-2 mb-4 receive-box"
         >
           <p class="font-semibold text-center">You will receive:</p>
           <p class="text-[20pt] font-bold text-center">$0.00</p>
@@ -317,6 +325,20 @@
       toCryptoBtn.addEventListener("click", () => {
         document.getElementById("fromCryptoDiv").classList.add("hidden");
         document.getElementById("exchangeOptions").classList.remove("hidden");
+      });
+      const calculateBtn = document.querySelector("button.bg-white");
+      calculateBtn.addEventListener("click", () => {
+        const receiveBox = document.querySelector(".receive-box");
+        receiveBox.classList.remove("show");
+        setTimeout(() => {
+          receiveBox.classList.add("show");
+        }, 1);
+        setTimeout(() => {
+          receiveBox.classList.remove("show");
+        }, 109);
+      });
+      window.addEventListener("load", () => {
+        document.body.classList.add("loaded");
       });
     </script>
   </body>
