--- a/exchange/index.html
+++ b/exchange/index.html
@@ -150,7 +150,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl border border-white/50 w-1/3 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://cdn-icons-png.flaticon.com/512/733/733372.png"
               alt="image"
               class="w-[20px]"
             />
@@ -166,7 +166,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://cdn-icons-png.freepik.com/256/13126/13126628.png"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -208,7 +208,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://cdn-icons-png.flaticon.com/512/733/733372.png"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -218,7 +218,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://png.pngtree.com/png-clipart/20231220/original/pngtree-bank-transfer-icon-savings-photo-png-image_13884882.png"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -228,7 +228,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://cdn-icons-png.freepik.com/256/13126/13126628.png"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -238,7 +238,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://cdn-icons-png.freepik.com/256/13126/13126628.png"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -248,7 +248,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://cdn-icons-png.flaticon.com/512/2879/2879440.png"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -258,7 +258,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://files.svgcdn.io/token-branded/ton.svg"
               alt="image"
               class="w-[20px] items-center"
             />
@@ -268,7 +268,7 @@
             class="bg-black text-white px-4 py-2 shadow-xl focus:border-sky-300 border border-white/50 rounded-lg text-center flex flex-col items-center justify-center gap-1 transition-all duration-300 ease-in-out focus:ring-4 focus:ring-sky-300 focus:border-sky-300 focus:animate-gradient"
           >
             <img
-              src="https://cdn-icons-png.flaticon.com/512/893/893081.png"
+              src="https://img.icons8.com/ios11/512/228BE6/lock.png"
               alt="image"
               class="w-[20px] items-center"
             />
